--- a/IQAirApiClient/IQAirApiClient.csproj
+++ b/IQAirApiClient/IQAirApiClient.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
       <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
     </ItemGroup>
 
